<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="?attr/colorPrimary"
    android:padding="12dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/header_portrait"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/customer_name"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_person_black_48dp"
        app:civ_fill_color="@android:color/white" />

    <TextView
        android:id="@+id/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/customer_email"
        android:layout_marginLeft="4dp"
        android:text="@string/customer_name_nav"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:clickable="true"
        android:text="@string/log_in_nav"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/customer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        tools:text="@string/template_customer_email_nav" />

</RelativeLayout>