<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="4dp"
    app:elevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_food_list_item"
            android:contentDescription="@string/content_description_food_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/gradient"
            android:padding="8dp">

            <TextView
                android:id="@+id/name_food_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                tools:text="@string/template_food_name_item" />

            <TextView
                android:id="@+id/price_food_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/template_food_price_item" />
        </RelativeLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>
