<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_name_title"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/customer_name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_email_title"
            android:textColor="@android:color/black"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/customer_email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_uuid_title"
            android:textColor="@android:color/black"
            android:layout_marginRight="8dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/customer_uuid_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>