<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout_bag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_bag"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/linear_layout_bag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="430dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                </LinearLayout>

                <TextView
                    android:id="@+id/empty_bag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/bag_empty" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <Spinner
                android:id="@+id/spinner_bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/choices_array" />

            <EditText
                android:id="@+id/note_bag"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/leave_messages_hint" />

            <Button
                android:id="@+id/submit_order_bag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/done_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>